--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "ethers": "^6.16.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
