--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ethers": "^6.16.0",
+    "lucide-react": "^0.561.0",
     "mongoose": "^9.0.1",
     "next": "16.0.7",
     "react": "19.2.0",
